--- a/little-lemon-coursera/src/App.css
+++ b/little-lemon-coursera/src/App.css
@@ -36,3 +36,94 @@
     transform: rotate(360deg);
   }
 }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+footer {
+  background: linear-gradient(30deg,#d2ff09,#282c34);
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+}
+header {
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+}
+nav {
+  display: grid;
+  justify-content: space-around;
+  padding: 1rem;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+}
+
+
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex; 
+  justify-content: space-around; 
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .nav-list {
+      flex-direction: row; /* Horizontal on larger screens */
+      justify-content: center;
+  }
+}
+.nav-list li {
+  margin: 0; 
+}
+
+.nav-list a {
+  text-decoration: none; 
+  color: white;
+  font-size: 1rem; 
+  padding: 0.5rem 1rem; 
+  border-radius: 4px; 
+  transition: background-color 0.3s ease; 
+}
+
+.nav-list a:hover {
+  background-color: #555;
+}
+
+.header-nav-container {
+  background: linear-gradient(30deg,#282c34,#d2ff09);
+  display: flex; 
+  align-items: center; 
+  justify-content: space-around; 
+  padding: 1rem; 
+  background-color: #333;
+}
+
+
+.footer-section {
+  display: flex; /* Use Flexbox */
+  justify-content: space-around; /* Distribute space between sections */
+  gap: 2rem; /* Optional: Adds space between sections */
+  padding: 2rem; /* Optional: Adds padding inside the footer */
+}
+
+.footer-section section {
+  flex: 1; /* Ensure each section takes equal space */
+  max-width: 300px; /* Optional: Limits the width of each section */
+}
+
+.footer-section h2 {
+  margin-bottom: 1rem; /* Optional: Adds space below the header */
+}
